--- a/app/views/dashboard/api_keys/index.html.erb
+++ b/app/views/dashboard/api_keys/index.html.erb
@@ -4,7 +4,7 @@
       <div class="flex justify-between h-16">
         <div class="flex">
           <div class="flex-shrink-0 flex items-center">
-            <h1 class="text-xl font-bold text-gray-900">Multibuzz</h1>
+            <h1 class="text-xl font-bold text-gray-900">mbuzz</h1>
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
             <%= link_to "Dashboard", dashboard_path, class: "text-gray-500 hover:text-gray-900 inline-flex items-center px-1 pt-1 text-sm font-medium" %>
