--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,8 +3,17 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex justify-between h-16">
         <div class="flex">
-          <div class="flex-shrink-0 flex items-center">
-            <h1 class="text-xl font-bold text-gray-900">mbuzz</h1>
+          <div class="flex-shrink-0 flex items-center gap-3">
+            <div class="p-1.5">
+              <svg width="24" height="24" viewBox="0 0 963 963" fill="none" xmlns="http://www.w3.org/2000/svg" style="display: block;">
+                <path d="M60.2819 352C36.0202 352 14.0154 362.255 4.6117 378.033C-4.79205 393.811 0.474051 411.823 17.7769 423.788L361.202 664.001V814.809C361.202 825.984 367.596 836.634 378.881 844.523L499.249 928.67C516.552 940.766 542.318 944.316 564.887 937.742C587.456 931.168 601.938 915.917 601.938 898.956V664.001L945.363 423.919C962.666 411.823 967.744 393.811 958.34 378.033C948.936 362.255 927.12 352 902.858 352H60.2819Z" fill="#1F2937"/>
+                <rect x="57" y="120" width="199" height="210" rx="6" fill="#6366F1"/>
+                <rect x="290" y="49" width="177" height="153" rx="8" fill="#EC4899"/>
+                <rect x="501" y="3" width="175" height="273" rx="8" fill="#10B981"/>
+                <rect x="710" y="172" width="207" height="158" rx="6" fill="#F59E0B"/>
+              </svg>
+            </div>
+            <h1 class="text-2xl font-bold text-gray-900">mbuzz</h1>
           </div>
           <div class="hidden sm:ml-6 sm:flex sm:space-x-8">
             <%= link_to "Dashboard", dashboard_path, class: "border-b-2 border-indigo-500 text-gray-900 inline-flex items-center px-1 pt-1 text-sm font-medium" %>
