--- a/app/views/docs/getting_started.md.erb
+++ b/app/views/docs/getting_started.md.erb
@@ -414,7 +414,7 @@ function getClientMetadata() {
 }
 
 // Send to Multibuzz API
-fetch('https://api.multibuzz.io/api/v1/events', {
+fetch('https://multibuzz.io/api/v1/events', {
   method: 'POST',
   headers: {
     'Authorization': 'Bearer YOUR_API_KEY',
